--- a/TimedPower/SettingForm.resx
+++ b/TimedPower/SettingForm.resx
@@ -1,17 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
+  <!-- 
+    Microsoft ResX Schema 
+    
     Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
     associated with the data types.
-
+    
     Example:
-
+    
     ... ado.net/XML headers & schema ...
     <resheader name="resmimetype">text/microsoft-resx</resheader>
     <resheader name="version">2.0</resheader>
@@ -26,36 +26,36 @@
         <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
         <comment>This is a comment</comment>
     </data>
-
-    There are any number of "resheader" rows that contain simple
+                
+    There are any number of "resheader" rows that contain simple 
     name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
     mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
     extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
     read any of the formats listed below.
-
+    
     mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-
+    
     mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
+    value   : The object must be serialized with 
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
             : and then encoded with base64 encoding.
 
     mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
+    value   : The object must be serialized into a byte array 
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
@@ -117,50 +117,30 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="ContextMenuSetting.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ContextMenuSetting.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <metadata name="SelfStartingSetting.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="SelfStartingSetting.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <metadata name="CloseToTaskBarSetting.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="CloseToTaskBarSetting.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <metadata name="okButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="okButton.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <metadata name="cancelButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="cancelButton.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <metadata name="applyButton.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="applyButton.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  </data>
+  <data name="$this.Locked" type="System.Boolean, mscorlib">
     <value>True</value>
-  </metadata>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
-        AACdRwAAnUcAAJ1HAACdRwAAnUcAAJ1HAE+dRwCinUcAzZ1HAMydRwCinUcAT51HAACgTAAAlzwIAIUa
-        IQCHHh8AnUcAAJ1HAACdRwAAnUcAM51HAOidRwD/nUcA/51HAP+dRwD/nUcA/51HAP+dRwDooE0ANJk/
-        CACFGiEAhx0fAJ1HAACdRwAAnUcATJ1HAP+dRwD/nUcAwp1HAD6dRwAXnkkAF59LAD6gTQDCoU4A/6JR
-        AP+WOQpNhBgjAIUZIgCdRwAAnUcAGp1HAP+dRwD/nUcAaZ1GAACfSgAAok8AAJ1IAACZQAUAlzwJAJg+
-        B3mQLxP/hBgk/4kiHDaNKRYAnUcAAJ1HAJ+dRwD/nUcAg5xGAACgTQAAnkgBAJExEQCKJBsAhh0fAIUb
-        IT+FGyHgghYl/4ghHf+dRwGgoU4ABp1HAEqdRwD/nUcA/51HAAWgTAAAnEQEAIggHQCDFyQAhhwgAIcf
-        Hp+IIB3/hx0f/4ggHZOeSgDpoEwA/55HAFmdRwCHnUcA/51HALWdSAAAn0sAAIokGgCEGCMAiCEcNYgg
-        HfGIIB3/iCEc84MXJD2UNQ8AolEAs51GAP+dRwCNnUcAnp1HAP+dRwCXn0sAAJlABgCFGiIAiCAdAIgg
-        HdqIIB3/iCAdtoYcIAeJIRwAn0sAAJ5IAJSdRwD/nUcAn51HAIadRwD/nUcAt59KAACaQQQAhhwgAIgg
-        HQCIIB3uiCAd/4ggHQCFGiEAmD0JAKFOAACdRgC1nUcA/51HAIydRwBLnUcA/51HAP6eSAADnkgAAIgg
-        HQCHHh8AiCAd74ggHf+HHh4AiCAeAJ9LAACdSAAEnUcA/51HAP+dRwBanUcAAJ1HAJ2dRwD/nUcAh6FO
-        AACRMREAgxcjAIghHO+IIRz/gxckAJAvEwChTgAAnUcAhp1HAP+dRwCenUcABZ1HAACdRwAbnUcA/51H
-        AP+eSQBln0sAAIkjGwCGHR/vhh0f/4khHACfSgAAnkkAZZ1HAP+dRwD/nUcAG51HAACdRwAAnUcAAJ1H
-        AEydRwD/nUYA/6FOAMKZPwgdhRoh24QZIe+XPQohoU8Av51GAP+dRwD/nUcAS51HAACdRwAAnUcAAJ1H
-        AACdRwAAnUcAMJ1HAO2eSgD/m0QFjIYcIL+GHCHWmkIGgJ9LAP+dRwDtnUcAMJ1HAACdRwAAnUcAAJ1H
-        AACdRwAAnUcAAJ1HAACdRwAAn0sAcJlABleFGyDVhRsh6pg+B1OgTABunUcAAJ1HAACdRwAAnUcAAJ1H
-        AACdRwAAnUcAAJ1HAACdRwAAnUcAAKFOAACTNA4AhBkimoQZIqeRMREAoU4AAJ1HAACdRwAAnUcAAJ1H
-        AACdRwAA+B8AAOAHAADAAwAAh+EAAI/AAAAPgAAAHggAAB4YAAAeeAAADnAAAI5wAACGYQAAwAMAAOAH
-        AAD4HwAA/n8AAA==
-</value>
+  </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\TimedPower_logo_16x.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
