--- a/TimedPower/AboutForm.en-us.resx
+++ b/TimedPower/AboutForm.en-us.resx
@@ -66,8 +66,10 @@
 					<xsd:element name="data">
 						<xsd:complexType>
 							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+								<xsd:element name="value" type="xsd:string" minOccurs="0"
+									msdata:Ordinal="1" />
+								<xsd:element name="comment" type="xsd:string" minOccurs="0"
+									msdata:Ordinal="2" />
 							</xsd:sequence>
 							<xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
 							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
@@ -77,7 +79,8 @@
 					<xsd:element name="resheader">
 						<xsd:complexType>
 							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+								<xsd:element name="value" type="xsd:string" minOccurs="0"
+									msdata:Ordinal="1" />
 							</xsd:sequence>
 							<xsd:attribute name="name" type="xsd:string" use="required" />
 						</xsd:complexType>
@@ -98,4 +101,11 @@
 	<resheader name="writer">
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
+
+	<data name="$this.Text" xml:space="preserve">
+    <value>About</value>
+  </data>
+	<data name="statsBox.Text" xml:space="preserve">
+    <value>Stats</value>
+  </data>
 </root>
