解决一些细节上的问题，并准备发布v2.7.7

--- a/TimedPower/Main.en-us.resx
+++ b/TimedPower/Main.en-us.resx
@@ -240,4 +240,7 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Timed power</value>
   </data>
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>296, 102</value>
+  </data>
 </root>
