--- a/TimedPower/Main.resx
+++ b/TimedPower/Main.resx
@@ -674,16 +674,16 @@
     <value>7, 17</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>296, 102</value>
+    <value>276, 102</value>
   </data>
   <data name="$this.Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>312, 141</value>
+    <value>276, 102</value><!--<value>312, 141</value>-->
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>\</value>
+    <value>TP</value>
   </data>
   <data name="&gt;&gt;s10.Name" xml:space="preserve">
     <value>s10</value>
