--- a/TimedPower/Main.zh-cn.resx
+++ b/TimedPower/Main.zh-cn.resx
@@ -240,4 +240,50 @@
   <data name="$this.Text" xml:space="preserve">
     <value>定时电源</value>
   </data>
+
+  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+    <value>276, 102</value>
+  </data>
+  <data name="StopButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>226, 67</value>
+  </data>
+  <data name="StartButton.Location" type="System.Drawing.Point, System.Drawing">
+    <value>101, 67</value>
+  </data>
+  <data name="countdownLabel.Location" type="System.Drawing.Point, System.Drawing">
+    <value>4, 64</value>
+  </data>
+  <data name="TimeInput.Location" type="System.Drawing.Point, System.Drawing">
+    <value>51, 38</value>
+  </data>
+  <data name="TimeInput.Size" type="System.Drawing.Size, System.Drawing">
+    <value>161, 23</value>
+  </data>
+  <data name="TimeTypeSelect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>215, 38</value>
+  </data>
+  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>5, 38</value>
+  </data>
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>40, 20</value>
+  </data>
+  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>5, 9</value>
+  </data>
+  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>40, 20</value>
+  </data>
+  <data name="TimePicker.Location" type="System.Drawing.Point, System.Drawing">
+    <value>51, 38</value>
+  </data>
+  <data name="TimePicker.Size" type="System.Drawing.Size, System.Drawing">
+    <value>161, 24</value>
+  </data>
+  <data name="ActionSelect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>51, 8</value>
+  </data>
+  <data name="ActionSelect.Size" type="System.Drawing.Size, System.Drawing">
+    <value>212, 25</value>
+  </data>
 </root>
