--- a/TimedPower/SettingForm.zh-cn.resx
+++ b/TimedPower/SettingForm.zh-cn.resx
@@ -102,6 +102,9 @@
 		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
 	</resheader>
 
+	<data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
+		<value>295, 151</value>
+	</data>
 	<data name="$this.Text" xml:space="preserve">
     <value>设置</value>
     </data>
