--- a/TimedPower/Resources/langs/language.zh-cn.resx
+++ b/TimedPower/Resources/langs/language.zh-cn.resx
@@ -151,14 +151,17 @@
     <value>下载更新失败！</value>
   </data>
   <data name="main.messagebox.haveUpdate" xml:space="preserve">
-    <value>检查到可用的更新，是否进行更新？
-当前版本: V{0}
-最新版本: {1}
-发布时间: {2}
-大小: {3}
-发行说明:
-{4}
-{5}</value>
+<value>
+## 检查到可用的更新，是否进行更新？
+- 当前版本: V{0}
+- 最新版本: {1}
+- 发布时间: {2}
+- 大小: {3}
+### 发行说明:
+#### {4}
+
+{5}
+</value>
   </data>
   <data name="main.messagebox.isNewVersion" xml:space="preserve">
     <value>当前已是最新版本</value>
@@ -232,5 +235,12 @@
 
   <data name="global.alias" xml:space="preserve">
     <value>定时电源</value>
+  </data>
+
+  <data name="main.messagebox.button.upgrade" xml:space="preserve">
+    <value>更新</value>
+  </data>
+  <data name="main.messagebox.button.cancel" xml:space="preserve">
+    <value>取消</value>
   </data>
 </root>
