--- a/TimedPower/AutoTaskForm.en-us.resx
+++ b/TimedPower/AutoTaskForm.en-us.resx
@@ -129,12 +129,16 @@
   <data name="deleteButton.Text" xml:space="preserve">
     <value>Delete task</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="TimeInput.Location" type="System.Drawing.Point, System.Drawing">
-    <value>65, 59</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="resource.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
-  <data name="TimeInput.PlaceholderText" xml:space="preserve">
-    <value>0:1:0 or 1min or 1分</value>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="resource.Location" type="System.Drawing.Point, System.Drawing">
+    <value>126, 1</value>
+  </data>
+  <data name="TimeInput.Size" type="System.Drawing.Size, System.Drawing">
+    <value>154, 29</value>
   </data>
   <data name="timeTypeSelect.Items" xml:space="preserve">
     <value>everyday</value>
@@ -145,8 +149,14 @@
   <data name="timeTypeSelect.Items2" xml:space="preserve">
     <value>after app start</value>
   </data>
+  <data name="timeTypeSelect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>243, 21</value>
+  </data>
+  <data name="timeTypeSelect.Size" type="System.Drawing.Size, System.Drawing">
+    <value>130, 29</value>
+  </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>203, 30</value>
+    <value>171, 24</value>
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
     <value>75, 20</value>
@@ -154,8 +164,8 @@
   <data name="label3.Text" xml:space="preserve">
     <value>Time type</value>
   </data>
-  <data name="TimePicker.Location" type="System.Drawing.Point, System.Drawing">
-    <value>65, 58</value>
+  <data name="TimePicker.Size" type="System.Drawing.Size, System.Drawing">
+    <value>154, 29</value>
   </data>
   <data name="ActionSelect.Items" xml:space="preserve">
     <value>Shutdown</value>
@@ -175,11 +185,20 @@
   <data name="ActionSelect.Items5" xml:space="preserve">
     <value>UserOff</value>
   </data>
-  <data name="taskName_TextBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>52, 27</value>
+  <data name="ActionSelect.Location" type="System.Drawing.Point, System.Drawing">
+    <value>266, 56</value>
   </data>
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>1, 30</value>
+  <data name="ActionSelect.Size" type="System.Drawing.Size, System.Drawing">
+    <value>107, 29</value>
+  </data>
+  <data name="resource.ImeMode1" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="resource.Location1" type="System.Drawing.Point, System.Drawing">
+    <value>95, 1</value>
+  </data>
+  <data name="taskName_TextBox.Size" type="System.Drawing.Size, System.Drawing">
+    <value>123, 29</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>49, 20</value>
@@ -188,13 +207,13 @@
     <value>Name</value>
   </data>
   <data name="enableCheck.Size" type="System.Drawing.Size, System.Drawing">
-    <value>74, 24</value>
+    <value>58, 15</value>
   </data>
   <data name="enableCheck.Text" xml:space="preserve">
     <value>Enable</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>226, 60</value>
+    <value>216, 59</value>
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>53, 20</value>
@@ -204,6 +223,12 @@
   </data>
   <data name="label4.Text" xml:space="preserve">
     <value>Time set</value>
+  </data>
+  <data name="formTitle.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 19</value>
+  </data>
+  <data name="formTitle.Text" xml:space="preserve">
+    <value>Scheduled tasks</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
