--- a/TimedPower/Main.zh-cn.resx
+++ b/TimedPower/Main.zh-cn.resx
@@ -117,45 +117,11 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="ActionSelect.Location" type="System.Drawing.Point, System.Drawing">
-    <value>51, 8</value>
+  <data name="TimeInput.PromptText" xml:space="preserve">
+    <value>在此输入时间</value>
   </data>
-  <data name="ActionSelect.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 25</value>
-  </data>
-  <data name="TimePicker.Location" type="System.Drawing.Point, System.Drawing">
-    <value>51, 38</value>
-  </data>
-  <data name="TimePicker.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 24</value>
-  </data>
-  <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>5, 9</value>
-  </data>
-  <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>40, 20</value>
-  </data>
-  <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>5, 38</value>
-  </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>40, 20</value>
-  </data>
-  <data name="TimeTypeSelect.Location" type="System.Drawing.Point, System.Drawing">
-    <value>236, 38</value>
-  </data>
-  <data name="TimeInput.Location" type="System.Drawing.Point, System.Drawing">
-    <value>51, 38</value>
-  </data>
-  <data name="TimeInput.Size" type="System.Drawing.Size, System.Drawing">
-    <value>182, 23</value>
-  </data>
-  <data name="countdownLabel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>5, 64</value>
-  </data>
-  <data name="countdownLabel.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 35</value>
+  <data name="TimeInput.WaterMark" xml:space="preserve">
+    <value>在此输入时间</value>
   </data>
   <data name="FormMenuStrip_Help_AutoCheckUpdate.Text" xml:space="preserve">
     <value>自动检查更新</value>
@@ -224,9 +190,6 @@
         AQCH+AEAh+AhAI/AYQCPwfEAh8PhAIfD4QCHw+EAg8PBAMPDwwDAwwMA4AAHAPAADwD4AB8A/gB/AP/D
         /wD/w/8A
 </value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>297, 102</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
