--- a/TimedPower/Resources/langs/language.resx
+++ b/TimedPower/Resources/langs/language.resx
@@ -183,4 +183,10 @@
   <data name="main.winToast.timeWarning_autoTask.text" xml:space="preserve">
     <value />
   </data>
+  <data name="image.logo.ico.window" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\TimedPower_logo_window-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="image.logo.png.32x" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\img\TimedPower_logo_32x.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
