--- a/TimedPower/Main.resx
+++ b/TimedPower/Main.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
     Microsoft ResX Schema
@@ -190,10 +190,10 @@
     <value>45, 59</value>
   </data>
   <data name="TimePicker.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>0, 29</value>
+    <value>0, 35</value>
   </data>
   <data name="TimePicker.Size" type="System.Drawing.Size, System.Drawing">
-    <value>257, 29</value>
+    <value>257, 35</value>
   </data>
   <data name="TimePicker.TabIndex" type="System.Int32, mscorlib">
     <value>1</value>
@@ -839,9 +839,6 @@
   <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>7, 17</value>
-  </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>307, 134</value>
   </data>
