--- a/TimedPower/Main.resx
+++ b/TimedPower/Main.resx
@@ -126,7 +126,7 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="ActionSelect.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Segoe UI, 10pt</value>
+    <value>Segoe UI, 14px</value>
   </data>
   <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="ActionSelect.IntegralHeight" type="System.Boolean, mscorlib">
@@ -184,7 +184,7 @@
     <value>yyyy/MM/dd HH:mm:ss</value>
   </data>
   <data name="TimePicker.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft YaHei UI, 10pt</value>
+    <value>Segoe UI, 18px</value>
   </data>
   <data name="TimePicker.Location" type="System.Drawing.Point, System.Drawing">
     <value>45, 59</value>
@@ -310,7 +310,7 @@
     <value>True</value>
   </metadata>
   <data name="label1.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft YaHei UI, 10pt</value>
+    <value>Segoe UI Light, 14px</value>
   </data>
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 31</value>
@@ -331,7 +331,7 @@
     <value>label1</value>
   </data>
   <data name="&gt;&gt;label1.Type" xml:space="preserve">
-    <value>ReaLTaiizor.Controls.SmallLabel, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
+    <value>ReaLTaiizor.Controls.PoisonLabel, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;label1.Parent" xml:space="preserve">
     <value>$this</value>
@@ -343,7 +343,7 @@
     <value>True</value>
   </metadata>
   <data name="label2.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Microsoft YaHei UI, 10pt</value>
+    <value>Segoe UI Light, 14px</value>
   </data>
   <data name="label2.Location" type="System.Drawing.Point, System.Drawing">
     <value>3, 65</value>
@@ -364,7 +364,7 @@
     <value>label2</value>
   </data>
   <data name="&gt;&gt;label2.Type" xml:space="preserve">
-    <value>ReaLTaiizor.Controls.SmallLabel, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
+    <value>ReaLTaiizor.Controls.PoisonLabel, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;label2.Parent" xml:space="preserve">
     <value>$this</value>
@@ -379,7 +379,7 @@
     <value>Top, Right</value>
   </data>
   <data name="TimeTypeSelect.Font" type="System.Drawing.Font, System.Drawing">
-    <value>Segoe UI, 10pt</value>
+    <value>Segoe UI, 14px</value>
   </data>
   <data name="TimeTypeSelect.IntegralHeight" type="System.Boolean, mscorlib">
     <value>False</value>
@@ -451,7 +451,7 @@
     <value>TimeInput</value>
   </data>
   <data name="&gt;&gt;TimeInput.Type" xml:space="preserve">
-    <value>TimedPower.ControlOverride+PoisonTextBox_OR, 定时电源, Culture=neutral, PublicKeyToken=null</value>
+    <value>ReaLTaiizor.Controls.PoisonTextBox, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;TimeInput.Parent" xml:space="preserve">
     <value>$this</value>
@@ -490,7 +490,7 @@
     <value>countdownLabel</value>
   </data>
   <data name="&gt;&gt;countdownLabel.Type" xml:space="preserve">
-    <value>ReaLTaiizor.Controls.BigLabel, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
+    <value>ReaLTaiizor.Controls.PoisonLabel, ReaLTaiizor, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;countdownLabel.Parent" xml:space="preserve">
     <value>$this</value>
