多条更新内容： 为一些没有翻译的地方进行了翻译 为任务文件(*.tpt)添加了独立的图标，并且可以在设置中将其扩展名进行关联 将软件的图标(png, 256x)加入仓库以备用

--- a/TimedPower/Main.en-us.resx
+++ b/TimedPower/Main.en-us.resx
@@ -298,4 +298,11 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Timed power</value>
   </data>
+
+  <data name="TimeInput.PromptText" xml:space="preserve">
+    <value>Enter the time here</value>
+  </data>
+  <data name="TimeInput.WaterMark" xml:space="preserve">
+    <value>Enter the time here</value>
+  </data>
 </root>
